<resources>
    <string name="app_name">activityTracker</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="option1">Running</string>
    <string name="option2">Meditating</string>
    <string name="option3">Reading</string>
    <string name="option4">Studying</string>
    <string name="optionWriteIn">Submit</string>

    <string name="selectedD">WoooooooooooooW</string>
    <string name="about_title">About</string>
    <string name="about_Text">This app is a final project in a mobile app design class. The purpose of this app is to apply everything we learned through the semester through a group project.</string>
    <string name="home">Home</string>
    <string name="date_dispay">\"\"</string>
    <string name="activity_number">ID</string>
    <string name="name_act">Activity</string>
    <string name="hours">Hours</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
