<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/eventFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4DC3FF"
    android:orientation="vertical"
    tools:context=".eventFragment">

    <TextView
        android:id="@+id/selectedD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="Select an activity"
        android:textColor="#000000"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/option1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#B3FFEC"
            android:backgroundTintMode="src_atop"
            android:onClick="onClick"
            android:text="@string/option1"
            tools:text="@string/option1" />

        <Button
            android:id="@+id/option2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#B3FFEC"
            android:backgroundTintMode="src_atop"
            android:onClick="onClick"
            android:text="@string/option2"
            tools:text="@string/option2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/option3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#B3FFEC"
            android:backgroundTintMode="src_atop"
            android:onClick="onClick"
            android:text="@string/option3" />

        <Button
            android:id="@+id/option4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#B3FFEC"
            android:backgroundTintMode="src_atop"
            android:onClick="onClick"
            android:text="@string/option4" />
    </LinearLayout>

    <EditText
        android:id="@+id/editTextWriteIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Write in your own activity"
        android:textAlignment="center" />

    <Button
        android:id="@+id/optionWriteIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="#B3FFEC"
        android:backgroundTintMode="src_atop"
        android:onClick="onClick"
        android:text="@string/optionWriteIn" />

</LinearLayout>